# qualis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  dq-check.yml.example  release.yml
docs/: adapters.md  github-action.md  release.md
docs/agdr/: AgDR-0001-bounded-violation-sample.md  AgDR-0002-trunk-based-branch-protection.md  AgDR-0003-optional-sampling-capability.md  AgDR-0004-sqlalchemy-meta-adapter-and-registry.md  AgDR-0005-condition-pushdown-trust-boundary.md  AgDR-0006-reference-join-detected-colocation.md  AgDR-0007-notifier-implementations.md  AgDR-0008-cross-dataset-assertion.md  AgDR-0009-ui-framework-fastapi-htmx.md
examples/traffic_safety/: README.md
examples/traffic_safety/data/: accidents.csv
examples/traffic_safety/rules/: completeness.yaml  uniqueness.yaml  validity.yaml
src/qualis/: __init__.py  bootstrap.py  plugins.py
src/qualis/adapters/: _condition_sql.py  console.py
src/qualis/adapters/duckdb/: adapter.py  sql_templates.py
src/qualis/cli/: drift_cmd.py  main.py  review_cmd.py  ui_cmd.py
src/qualis/config/: context_loader.py  loader.py  settings.py  standards.py
src/qualis/discover/: drift_detector.py  evidence_builder.py  profiler.py  snapshot_store.py  suggester.py  writer.py
src/qualis/domain/: checks.py  condition.py  context.py  drift.py  enums.py  evidence.py  models.py  params.py  rule_engine.py  scoring.py  snapshot.py  standards.py
src/qualis/engine/: checker.py  diff.py
src/qualis/github/: __init__.py  __main__.py  comment.py
src/qualis/ports/: database.py  notifier.py  reference_data.py
src/qualis/report/: loader.py  scorecard.py  template.html.j2
src/qualis/review/: state_machine.py
src/qualis/ui/: __init__.py  _constants.py  _paths.py  server.py
tests/fixtures/context/: example_context.yaml
tests/fixtures/data/: accidents.csv
tests/fixtures/rules/: completeness.yaml
tests/integration/: test_end_to_end.py
tests/unit/: test_bootstrap.py  test_plugins.py
tests/unit/adapters/: CLAUDE.md  test_condition_sql.py  test_duckdb.py  test_in_memory.py  test_in_memory_reference_data.py  test_notifiers.py  test_postgres.py  test_sqlalchemy.py
tests/unit/config/: test_context_loader.py  test_loader.py  test_settings.py  test_standards.py
tests/unit/discover/: CLAUDE.md  test_evidence_builder.py  test_profiler.py  test_snapshot_store.py  test_suggester.py  test_writer.py
tests/unit/domain/: test_condition.py  test_context.py  test_drift.py  test_enums.py  test_evidence.py  test_models.py  test_params.py  test_rule_engine.py  test_scoring.py  test_standards.py
tests/unit/engine/: test_checker.py  test_diff.py
tests/unit/github/: test_comment.py
tests/unit/report/: test_loader.py  test_scorecard.py
tests/unit/review/: test_state_machine.py
tests/unit/ui/: test_server.py
(+10 files in other folders)
