[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualis"
version = "0.4.1"
description = "Data quality framework that tells you WHAT failed, not just that something did"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Ahmed Ashraf", email = "ahmedashraffcih@gmail.com" },
]
keywords = [
    "data-quality", "dq", "data-validation", "data-testing",
    "dama", "dmbok", "data-governance", "great-expectations-alternative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1", "psycopg-pool>=3.1"]

[project.scripts]
qualis = "qualis.cli.main:app"

[project.urls]
Homepage = "https://github.com/ahmedashraffcih/qualis"
Documentation = "https://github.com/ahmedashraffcih/qualis#readme"
Repository = "https://github.com/ahmedashraffcih/qualis"
Issues = "https://github.com/ahmedashraffcih/qualis/issues"
Changelog = "https://github.com/ahmedashraffcih/qualis/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/qualis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[tool.coverage.run]
source = ["qualis"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
    "types-pyyaml>=6.0.12.20260518",
]
